<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="373dp"
        android:layout_height="361dp"
        android:background="@drawable/borde_layout_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="83dp"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/borde_edittext"
            android:elevation="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="-25dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/borde_edittext"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="-25dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/boton_sin_relleno"
            android:fontFamily="@font/comfortaa_light"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/azulClaro" />

        <TextView
            android:id="@+id/txtEstadoRegistroLogin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:textSize="12sp"/>

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/btnLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="167dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="166dp"
            android:foregroundGravity="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="373dp"
        android:layout_height="166dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/borde_layout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/boton_con_relleno"
            android:fontFamily="@font/comfortaa_light"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/blancoFondo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center"
            android:text="@string/txtLoginRegistrar"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>