<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/layout_publicacion_profile"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImagePublicacion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:civ_border_color="#7A7A7A"
            app:civ_border_overlay="true"
            app:civ_border_width="0.2dp" />

        <TextView
            android:id="@+id/txtUsernameHeaderPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/userImagePublicacion"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center_vertical"
            android:text="@string/strUsernameHeaderPublicacion"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtLocalizacionPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:layout_below="@+id/txtUsernameHeaderPublicacion"
            android:layout_toEndOf="@+id/userImagePublicacion"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/strLocalizacionPublicacion" />

        <ImageButton
            android:id="@+id/btnActionPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/ic_more" />


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#EFCACACA"
        app:layout_constraintTop_toBottomOf="@+id/layout_publicacion_profile" />

    <RelativeLayout
        android:id="@+id/layoutImagenPublicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view"
        >

        <ImageView
            android:id="@+id/imgPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/strDescripcionImagePublicacion"
            android:scaleType="fitCenter"
            android:visibility="gone" />
        <VideoView
            android:id="@+id/videoPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutImagenPublicacion">

        <CheckBox
            android:id="@+id/btnLikePublicacion"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/ic_heart" />

        <CheckBox
            android:id="@+id/btnCommentPublicacion"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/btnLikePublicacion"
            android:button="@drawable/ic_comment" />

        <CheckBox
            android:id="@+id/btnSavePublicacion"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:button="@drawable/ic_save_photo"
            android:gravity="center" />

        <TextView
            android:id="@+id/txtLikesPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/btnLikePublicacion"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="80 MEGUSTAS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUsernameBodyPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLikesPublicacion"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/comfortaa_light"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/txtUsername"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescripcionPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtUsernameBodyPublicacion"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="2"
            android:minLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="descripcion" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>